# CarbonQTMe

./: CMakeLists.txt  CMakeLists.txt.user.ab2841a  Main.qml  README.md  carbonqt.db  carbonqt_cli.cpp  main.cpp  monitor
.github/workflows/: build.yml
backend/include/: ContextSwitchAnalyzer.h  DataLogger.h  EnergyEstimator.h  ProcessTracker.h  SystemMonitor.h
backend/src/: ContextSwitchAnalyzer.cpp  DataLogger.cpp  EnergyEstimator.cpp  ProcessTracker.cpp  SystemMonitor.cpp
components/: Dark_theme.qml.autosave  PidThreadsChart.qml  TableHeader.qml
pages/: Dashboard.qml  Processes.qml  Processes.qml.autosave
qtbridge/: EnergyController.cpp  EnergyController.h  MonitorController.cpp  MonitorController.h  ProcessModel.cpp  ProcessModel.h
